Added GCR Language Code

--- a/Airslamit/Gcr/view/frontend/templates/order/success.phtml
+++ b/Airslamit/Gcr/view/frontend/templates/order/success.phtml
@@ -24,3 +24,11 @@
   }
 </script>
 <!-- END GCR Opt-in Module Code -->
+
+<!-- BEGIN GCR Language Code -->
+<script>
+  window.___gcfg = {
+    lang: 'en_US'
+  };
+</script>
+<!-- END GCR Language Code -->
