Added GTIN Products array ( https://support.google.com/merchants/answer/7519329\?hl\=en\&ref_topic\=7105160 )

--- a/Airslamit/Gcr/view/frontend/templates/order/success.phtml
+++ b/Airslamit/Gcr/view/frontend/templates/order/success.phtml
@@ -18,7 +18,8 @@
           "estimated_delivery_date": "<?php echo $block->getEstimatedDate(); ?>",
 
           // OPTIONAL
-          "opt_in_style": "<?php echo $block->getConfigOptInStyle(); ?>"
+          "opt_in_style": "<?php echo $block->getConfigOptInStyle(); ?>",
+          "products": <?php print_r($block->getGtinProducts()); ?>
         }); 
      });
   }
