This change updates the way the language code is retrieved, making it dynamic to reflect the language setting of the current store view. This ensures that the language code used in the script is always in sync with the user's selected language, improving internationalization support.

--- a/Airslamit/Gcr/view/frontend/layout/checkout_onepage_success.xml
+++ b/Airslamit/Gcr/view/frontend/layout/checkout_onepage_success.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <body>
-    <referenceContainer name="order.success.additional.info">
+    <referenceContainer name="before.body.end">
         <block class="Airslamit\Gcr\Block\Success"
                name="airslamit.order.success"
                template="Airslamit_Gcr::order/success.phtml"
