--- a/Airslamit/Gcr/view/frontend/templates/order/success.phtml
+++ b/Airslamit/Gcr/view/frontend/templates/order/success.phtml
@@ -29,7 +29,7 @@
 <!-- BEGIN GCR Language Code -->
 <script>
   window.___gcfg = {
-    lang: 'en_US'
+    lang: "<?php echo $block->getLanguageCode(); ?>"
   };
 </script>
 <!-- END GCR Language Code -->
